; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_describe_cleanup_mode.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_describe_cleanup_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@describe_cleanup_mode.modes = internal global [4 x i8*] [i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [11 x i8] c"whitespace\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"verbatim\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"scissors\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"strip\00", align 1
@.str.4 = private unnamed_addr constant [35 x i8] c"invalid cleanup_mode provided (%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @describe_cleanup_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @describe_cleanup_mode(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @ARRAY_SIZE(i8** getelementptr inbounds ([4 x i8*], [4 x i8*]* @describe_cleanup_mode.modes, i64 0, i64 0))
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds [4 x i8*], [4 x i8*]* @describe_cleanup_mode.modes, i64 0, i64 %9
  %11 = load i8*, i8** %10, align 8
  store i8* %11, i8** %2, align 8
  br label %15

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @BUG(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.4, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %12, %7
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}

declare dso_local i32 @ARRAY_SIZE(i8**) #1

declare dso_local i32 @BUG(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
